--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Birthstone&family=Grey+Qo&family=Overpass&family=Parisienne&family=Poppins:wght@300;400;500&family=Roboto:wght@300;400&family=Ubuntu:wght@400;500&display=swap" rel="stylesheet">
     <!-- CSS Local -->
-    <link rel="preload" href="index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="index.css"></noscript>
+    <link rel="stylesheet" href="index.css">
     <!-- JS Local -->
     <script src="scripts/loader.js" defer></script>
     <script src="scripts/toggleMode.js" defer></script>
