Ajout de Hello City

--- a/index.html
+++ b/index.html
@@ -438,6 +438,9 @@
                 <a href="https://buy-nft.vercel.app/" target="_blank">
                     <img src="projets/buynft.webp" alt="buynft">
                 </a>
+                <a href="https://hello-city-ln.herokuapp.com/" target="_blank">
+                    <img src="projets/hello-city.webp" alt="hello-city">
+                </a>
                 <a href="https://login-page1.vercel.app/" target="_blank">
                     <img src="projets/loginpage-1.webp" alt="loginpage-1">
                 </a>
