--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="index.css">
     <!-- JS Local -->
     <script src="scripts/loader.js" defer></script>
+    <script src="scripts/scroll.js" defer></script>
     <script src="scripts/toggleMode.js" defer></script>
     <script src="scripts/nav.js" defer></script>
     <script src="scripts/experience.js" defer></script>
@@ -51,7 +52,7 @@
         <div class="loader-bloc loader-left"></div>
         <div class="loader-bloc loader-right"></div>
     </div>
-
+    <div class="scroll-indicator"></div>
     <div id="modal">
         <div class="card-don">
             <img class="don-close" src="img/close-circle-line.svg" alt="close">
