--- a/index.html
+++ b/index.html
@@ -439,6 +439,9 @@
                 <a href="https://buy-nft.vercel.app/" target="_blank">
                     <img src="projets/buynft.webp" alt="buynft">
                 </a>
+                <a href="https://awwwards-nav-bar.vercel.app/" target="_blank">
+                    <img src="projets/awwwards-navbar.webp" alt="awwwards-navbar">
+                </a>
                 <a href="https://hello-city-ln.herokuapp.com/" target="_blank">
                     <img src="projets/hello-city.webp" alt="hello-city">
                 </a>
@@ -550,7 +553,7 @@
             <div class="footer-container-socials">
                 <a href="https://twitter.com/ln_dev7?s=09" target="_blank">
                     <ion-icon name="logo-twitter"></ion-icon>
-                </a>
+                </a> 
                 <a href="https://www.linkedin.com/in/lndev" target="_blank">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
