ajout du cv au header

--- a/index.html
+++ b/index.html
@@ -87,13 +87,7 @@
             <li><a href="#skillest">Compétences</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#experience">Expérience</a></li>
-            <li><a href="#other">Autres</a></li>
-            <li>
-                <a href="https://drive.google.com/file/d/1KKmC-Wo-mTnAq8GlhFldHt2WBnuElt2B/view?usp=sharing" target="_blank">
-                    <ion-icon name="document-outline"></ion-icon>
-                </a>
-            </li>
-            <li>
+            <li><a href="#other">Autres</a></li><li>
                 <a href="https://twitter.com/ln_dev7?s=09" target="_blank">
                     <ion-icon name="logo-twitter"></ion-icon>
                 </a>
@@ -133,11 +127,6 @@
             <li><a href="#other">Autres</a></li>
         </ul>
         <ul class="navigation-socials">
-            <li>
-                <a href="https://drive.google.com/file/d/1KKmC-Wo-mTnAq8GlhFldHt2WBnuElt2B/view?usp=sharing" target="_blank">
-                    <ion-icon name="document-outline" alt="dasd"></ion-icon>
-                </a>
-            </li>
             <li>
                 <a href="https://twitter.com/ln_dev7?s=09" target="_blank">
                     <ion-icon name="logo-twitter"></ion-icon>
@@ -180,6 +169,7 @@
                 <h1 class="header-container-title">Salut, moi c'est Leonel NGOYA<img src="img/Hi.gif"></h1>
                 <h1 class="header-container-subtitle">Développeur FrontEnd</h1>
                 <h2>Ici c'est mon site personnel, où vous y trouverez toutes les informations me concernant.</h2>
+                <a href="https://drive.google.com/file/d/1KKmC-Wo-mTnAq8GlhFldHt2WBnuElt2B/view?usp=sharing" target="_blank" class="header-container-cv">Mon CV</a>
             </div>
         </div>
     </header>
@@ -531,17 +521,6 @@
                             <span>Udemy</span>
                         </div>
                     </a>
-                </div>
-            </div>
-            <div class="other-container-contact">
-                <div class="contact-card">
-                    <img src="img/leonel.webp" alt="leonel ngoya">
-                    <div class="card-text">
-                            <a href="mailto:leonelngoya@gmail.com" target="_blank">
-                            Message
-                            </a>
-                            <a href="https://drive.google.com/file/d/1KKmC-Wo-mTnAq8GlhFldHt2WBnuElt2B/view?usp=sharing" target="_blank" class="other-container-cv">Mon CV</a>
-                    </div>
                 </div>
             </div>
         </div>
