--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
 <body class="dark-mode">
 
-    <!-- <div class="loader">
+<div id="wrapper">
+        <!-- <div class="loader">
         <div class="loader-load"></div>
         <div class="loader-bloc loader-left"></div>
         <div class="loader-bloc loader-right"></div>
@@ -65,43 +66,46 @@
             <h3>MERCI 😊</h3>
         </div>
     </div>
-
-    <nav class="navigation-menu">
-        <li><a href="#about">Moi</a></li>
-        <li><a href="#skillest">Compétences</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#experience">Expérience</a></li>
-        <li><a href="#other">Autres</a></li><li>
-            <a href="https://twitter.com/ln_dev7?s=09" target="_blank">
-                <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-        </li>
-        <li>
-            <a href="https://github.com/ln-dev7" target="_blank">
-                <ion-icon name="logo-github"></ion-icon>
-            </a>
-        </li>
-        <li>
-            <a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank">
-                <ion-icon name="logo-youtube"></ion-icon>
-            </a>
-        </li>
-        <li>
-            <a href="https://www.twitch.tv/ln_dev7" target="_blank">
-                <ion-icon name="logo-twitch"></ion-icon>
-            </a>
-        </li>
-        <li>
-            <a href="https://www.linkedin.com/in/lndev" target="_blank">
-                <ion-icon name="logo-linkedin"></ion-icon>
-            </a>
-        </li>
-        <li>
-            <a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank">
-                <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-        </li>
-    </nav>
+    <div class="wrapper-menu">
+        <ul>
+            <li class="close-menu"><span>FERMER</span></li>
+            <li><a href="#about">Moi</a></li>
+            <li><a href="#skillest">Compétences</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#experience">Expérience</a></li>
+            <li><a href="#other">Autres</a></li>
+            <li>
+                <a href="https://twitter.com/ln_dev7?s=09" target="_blank">
+                    <ion-icon name="logo-twitter"></ion-icon>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/ln-dev7" target="_blank">
+                    <ion-icon name="logo-github"></ion-icon>
+                </a>
+            </li>
+            <li>
+                <a href="https://youtube.com/channel/UCocpsPbVlb4bGYZKa-VXySg" target="_blank">
+                    <ion-icon name="logo-youtube"></ion-icon>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.twitch.tv/ln_dev7" target="_blank">
+                    <ion-icon name="logo-twitch"></ion-icon>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/lndev" target="_blank">
+                    <ion-icon name="logo-linkedin"></ion-icon>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/invites/contact/?i=md4mtcvgsrg4&utm_content=7zkbn8h" target="_blank">
+                    <ion-icon name="logo-instagram"></ion-icon>
+                </a>
+            </li>
+        </ul>
+    </div>
 
     <nav class="navigation" id="navigation">
         <div class="navigation-burger">
@@ -524,6 +528,8 @@
             </svg>
         </div>
     </div>
+</div>
+
 </body>
 
 </html>
