refacto cert-card

--- a/index.html
+++ b/index.html
@@ -469,16 +469,45 @@
                 <h1>Mes certifications</h1>
                 <h2>J'ai eu à faire des formations certifiantes en ligne où j'ai acquis la majorité des bases de mes connaissances sur le web, notamment sur :</h2>
                 <div class="cert">
-                    <a href="https://drive.google.com/drive/folders/1mTQ98vR_POncLTRs8jGD4eTJoI5U5jHU?usp=sharing" target="_blank">
+                    <div class="cert-card">
+                        <a href="https://drive.google.com/drive/folders/1mTQ98vR_POncLTRs8jGD4eTJoI5U5jHU?usp=sharing" target="_blank">
+                        <div class="card-img">
+                              <img src="./img/openclassrooms.webp" alt="openclassrooms" />
+                            </div>
+                        </a>
+                            <div class="card-body">
+                              <div class="card-body__text">
+                                <h3>OpenClassrooms</h3>
+                                  <h5>Cliquez sur l' image</h5>
+                              </div>
+                              <div class="card-body__footer">
+                                  <button>HTML</button>
+                                  <button>CSS</button>
+                                  <button>Animation CSS</button>
+                                    <button>JavaScript</button>
+                                    <button>VueJS</button>
+                                    <button>GIT-GitHub</button>
+                                    <button>POO PHP</button>
+                              </div>
+                            </div>
+                          </div>
                         <div class="cert-card">
-                            <span>OpenClassrooms</span>
+                            <a href="https://drive.google.com/drive/folders/1iBz8zi92uPJse4o6n4iwDDvQd-atU6OH" target="_blank">
+                            <div class="card-img">
+                              <img src="./img/udemy.webp" alt="udemy" />
+                            </div>
+                            </a>
+                            <div class="card-body">
+                              <div class="card-body__text">
+                                <h3>Udemy</h3>
+                                <h5>Cliquez sur l' image</h5>
+                              </div>
+                              <div class="card-body__footer">
+                                  <button>JavaScript</button>
+                                  <button>Svelte</button>
+                                </div>
+                            </div>
                         </div>
-                    </a>
-                    <a href="https://drive.google.com/drive/folders/1iBz8zi92uPJse4o6n4iwDDvQd-atU6OH" target="_blank">
-                        <div class="cert-card">
-                            <span>Udemy</span>
-                        </div>
-                    </a>
                 </div>
             </div>
         </div>
