Gestion du click des liens de la navbar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- CSS Local -->
     <link rel="stylesheet" href="index.css">
     <!-- JS Local -->
-    <!-- <script src="scripts/loader.js" defer></script> -->
+    <script src="scripts/loader.js" defer></script>
     <script src="scripts/scroll.js" defer></script>
     <script src="scripts/toggleMode.js" defer></script>
     <script src="scripts/nav.js" defer></script>
@@ -44,11 +44,11 @@
 <body class="dark-mode">
 
 <div id="wrapper">
-        <!-- <div class="loader">
+        <div class="loader">
         <div class="loader-load"></div>
         <div class="loader-bloc loader-left"></div>
         <div class="loader-bloc loader-right"></div>
-    </div> -->
+    </div>
     <div class="scroll-indicator"></div>
     
     <div class="wrapper-menu">
