fermeture du menu quand on clique outside

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <body class="dark-mode">
 
-<div id="wrapper">
+<div id="wrapper" class="wrapper">
         <div class="loader">
         <div class="loader-load"></div>
         <div class="loader-bloc loader-left"></div>
