--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Title -->
     <title>NGOYA Leonel • Développeur FrontEnd</title>
     <!-- Page Icon -->
-    <link rel="icon" sizes="76x76" href="img/logo.webp">
+    <link rel="icon" sizes="76x76" href="img/logo.ico">
     <!-- Ionicon -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <!-- CSS Local -->
