fin du test du nouveau loader

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Title -->
     <title>NGOYA Leonel • Développeur FrontEnd</title>
     <!-- Page Icon -->
-    <link rel="icon" sizes="76x76" href="img/logo.webp">
+    <link rel="icon" sizes="76x76" href="img/logo.ico">
     <!-- Ionicon -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <!-- CSS Local -->
@@ -44,11 +44,24 @@
 <body class="dark-mode">
 
 <div id="wrapper" class="wrapper">
-        <div class="loader">
-        <div class="loader-load"></div>
+
+    <!-- <div class="loader">
         <div class="loader-bloc loader-left"></div>
         <div class="loader-bloc loader-right"></div>
+        <div class="loader-load"></div>
+    </div> -->
+
+    <div class="loader">
+        <div class="loader-bloc loader-left"></div>
+        <div class="loader-bloc loader-right"></div>
+        <div class="loader-load">
+            <div class="loader-item"></div>
+            <div class="loader-item"></div>
+            <div class="loader-item"></div>
+            <div class="loader-item"></div>
+        </div>
     </div>
+
     <div class="scroll-indicator"></div>
     
     <div class="wrapper-menu">
@@ -147,7 +160,7 @@
         <div class="skillest-cards">
             <div class="skillest-cards-title">
                 <h1>Mes compétences</h1>
-                <h2>Ici vous verrez tous les languages et outils que j'utilise pour travailler.</h2>
+                <h2>Ici vous verrez tous les langages et outils que j'utilise pour travailler.</h2>
             </div>
             <div class="skillest-cards-container">
                 <div class="skillest-cards-container-card">
@@ -198,7 +211,7 @@
         <div class="services-cards">
             <div class="services-cards-title">
                 <h1>Mes services</h1>
-                <h2>Etant un développeur FrontEnd, j'ai deux services à vous presenter dans ce domaine.</h2>
+                <h2>Etant un développeur FrontEnd, j'ai deux services à vous présenter dans ce domaine.</h2>
             </div>
             <div class="services-cards-container">
                 <div class="services-cards-container-card">
