changement tu texte d' intro

--- a/index.en.html
+++ b/index.en.html
@@ -143,7 +143,7 @@
     <div class="about" id="about">
         <h1 class="about-title">About me</h1>
         <h2 class="about-about">
-            I am an 18 years old <b>front-end developer</b> living in Cameroon. <br>
+            I am an 18 year old <b>front-end developer</b> from Cameroon. <br>
 I want to be as creative as possible by using my imagination and my intellectual abilities in my work. <br>
 My goal is to make a site as beautiful and attractive as possible.
         </h2>
