--- a/index.en.html
+++ b/index.en.html
@@ -334,7 +334,7 @@
                                 <div class="experience-cards-container-card-container">
                                     <h3>FrontEnd Developer <span>Development</span></h3>
                                     <p class="experience-cards-container-card-container-description">
-                                        <b>Avril 2022 • Présent</b>
+                                        <b>April 2022 • Present</b>
                                     </p>
                                 </div>
                                 <div class="experience-cards-container-card-description">
