--- a/index.en.html
+++ b/index.en.html
@@ -25,7 +25,7 @@
     <meta property="og:site_name" content="💻 NGOYA LEONEL️ 🌴">
     <meta property="og:type" content="website">
     <!-- Title -->
-    <title>NGOYA Leonel • Développeur FrontEnd</title>
+    <title>NGOYA Leonel • FrontEnd Developer</title>
     <!-- Page Icon -->
     <link rel="icon" sizes="76x76" href="img/logo.ico">
     <!-- Ionicon -->
