Ajout de Cameroons porfolio

--- a/index.en.html
+++ b/index.en.html
@@ -332,9 +332,10 @@
                                     <a href="https://find-a-job.vercel.app/" target="_blank"><img src="img/findajob.png" alt="FindAJob"></a>
                                 </div>
                                 <div class="experience-cards-container-card-container">
-                                    <h3>FrontEnd Developer <span>Development</span></h3>
+                                    <h3>FrontEnd Developer</h3>
                                     <p class="experience-cards-container-card-container-description">
                                         <b>April 2022 • Present</b>
+                                        <p><a href="https://find-a-job.vercel.app/" target="_blank">Find A Job</a></p>
                                     </p>
                                 </div>
                                 <div class="experience-cards-container-card-description">
@@ -345,7 +346,26 @@
                                     </div>
                                 </div>
                             </div>
-
+                            <div class="line"></div>
+                            <div class="experience-cards-container-card">
+                                <div class="experience-cards-container-card-img">
+                                    <a href="https://cameroon-porfolios.vercel.app/" target="_blank"><img src="img/cameroonportfolios.svg" alt="cameroonportfolios"></a>
+                                </div>
+                                <div class="experience-cards-container-card-container">
+                                    <h3>FrontEnd Developer</h3>
+                                    <p class="experience-cards-container-card-container-description">
+                                        <b>June 2022 • Present</b>
+                                        <p><a href="https://cameroon-porfolios.vercel.app/" target="_blank">Cameroon Portfolios</a></p>
+                                    </p>
+                                </div>
+                                <div class="experience-cards-container-card-description">
+                                    <h4>
+                                        Open source collection of Cameroonian porfolios
+                                    </h4>
+                                    <div><button>ReactJS</button><button>GIT</button> <button>GITHUB</button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="faq-card active">
