update link portfolio

--- a/index.en.html
+++ b/index.en.html
@@ -349,13 +349,13 @@
                             <div class="line"></div>
                             <div class="experience-cards-container-card">
                                 <div class="experience-cards-container-card-img">
-                                    <a href="https://cameroon-porfolios.vercel.app/" target="_blank"><img src="img/cameroonportfolios.svg" alt="cameroonportfolios"></a>
+                                    <a href="https://cameroon-portfolios.vercel.app/" target="_blank"><img src="img/cameroonportfolios.svg" alt="cameroonportfolios"></a>
                                 </div>
                                 <div class="experience-cards-container-card-container">
                                     <h3>FrontEnd Developer</h3>
                                     <p class="experience-cards-container-card-container-description">
                                         <b>June 2022 • Present</b>
-                                        <p><a href="https://cameroon-porfolios.vercel.app/" target="_blank">Cameroon Portfolios</a></p>
+                                        <p><a href="https://cameroon-portfolios.vercel.app/" target="_blank">Cameroon Portfolios</a></p>
                                     </p>
                                 </div>
                                 <div class="experience-cards-container-card-description">
