Ajout de streamix

--- a/index.en.html
+++ b/index.en.html
@@ -440,6 +440,9 @@
                     <a href="https://github.com/ln-dev7/LN-Gram/" target="_blank">
                         <img src="projets/clone-ui-ig.webp" alt="clone-ui-ig">
                     </a>
+                    <a href="https://streamix-inte.vercel.app/" target="_blank">
+                        <img src="projets/streamix.webp" alt="streamix-inte">
+                    </a>
                     <a href="https://github.com/ln-dev7/ln-react-blog" target="_blank">
                         <img src="projets/ln-react-blog.webp" alt="ln-react-blog">
                     </a>
