--- a/index.html
+++ b/index.html
@@ -440,6 +440,9 @@
                     <a href="https://login-page1.vercel.app/" target="_blank">
                         <img src="projets/loginpage-1.webp" alt="loginpage-1">
                     </a>
+                    <a href="https://streamix-inte.vercel.app/" target="_blank">
+                        <img src="projets/streamix.webp" alt="streamix-inte">
+                    </a>
                     <a href="https://github.com/ln-dev7/LN-Gram/" target="_blank">
                         <img src="projets/clone-ui-ig.webp" alt="clone-ui-ig">
                     </a>
