Ajout de fitclass

--- a/index.en.html
+++ b/index.en.html
@@ -449,6 +449,9 @@
                     <a href="https://app-expenses-delta.vercel.app/" target="_blank">
                         <img src="projets/app-expenses.webp" alt="app-expenses">
                     </a>
+                    <a href="https://fit-class-inte.vercel.app/" target="_blank">
+                        <img src="projets/fitclass.webp" alt="fitclass">
+                    </a>
                     <a href="https://pokedex-six-iota.vercel.app/" target="_blank">
                         <img src="projets/pokedex.webp" alt="pokedex">
                     </a>
