--- a/index.html
+++ b/index.html
@@ -449,6 +449,9 @@
                     <a href="https://github.com/ln-dev7/ln-react-blog" target="_blank">
                         <img src="projets/ln-react-blog.webp" alt="ln-react-blog">
                     </a>
+                    <a href="https://fit-class-inte.vercel.app/" target="_blank">
+                        <img src="projets/fitclass.webp" alt="fitclass">
+                    </a>
                     <a href="https://app-expenses-delta.vercel.app/" target="_blank">
                         <img src="projets/app-expenses.webp" alt="app-expenses">
                     </a>
