--- a/index.en.html
+++ b/index.en.html
@@ -295,6 +295,28 @@
                         </div>
                         <div class="answer">
                             <div class="experience-cards-container-card">
+                                <!-- <div class="experience-cards-container-card">
+                                    <div class="experience-cards-container-card-img">
+                                        <a href="https://mboadigital.tech/" target="_blank"><img src="img/mboa.webp" alt="Mboa Digital"></a>
+                                    </div>
+                                    <div class="experience-cards-container-card-container">
+                                        <h3>FrontEnd Developer Intern</h3>
+                                        <p class="experience-cards-container-card-container-description">
+                                            <b>June 2022 • August 2022</b>
+                                            <p>Mboa Digital • Yaounde</p>
+    
+                                        </p>
+                                    </div>
+                                    <div class="experience-cards-container-card-description">
+                                        <h4>
+                                        </h4>
+                                        <div><button>REACT JS</button> <button>MOTION</button>
+                                            <button>AGILE</button>
+                                            <button>TEAM WORK</button> <button>git</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="line"></div> -->
                                 <div class="experience-cards-container-card-img">
                                     <a href="https://market.lamater.net/" target="_blank"><img src="img/lamater.webp" alt="LaMater"></a>
                                 </div>
@@ -552,6 +574,22 @@
                                 <div class="card-body__footer">
                                     <button>JavaScript</button>
                                     <button>Svelte</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cert-card">
+                            <a href="https://drive.google.com/drive/folders/1U677r2Nnmtq8pm8klai63iOYFMSuWxl6?usp=sharing" target="_blank">
+                                <div class="card-img">
+                                    <img src="./img/linkedin-learning.webp" alt="linkedin-learning" />
+                                </div>
+                            </a>
+                            <div class="card-body">
+                                <div class="card-body__text">
+                                    <h3>LinkedIn Learning</h3>
+                                    <h5>Click on the picture</h5>
+                                </div>
+                                <div class="card-body__footer">
+                                    <button>React JS</button>
                                 </div>
                             </div>
                         </div>
