Ajout du stage a Mboa

--- a/index.en.html
+++ b/index.en.html
@@ -295,7 +295,7 @@
                         </div>
                         <div class="answer">
                             <div class="experience-cards-container-card">
-                                <!-- <div class="experience-cards-container-card">
+                                <div class="experience-cards-container-card">
                                     <div class="experience-cards-container-card-img">
                                         <a href="https://mboadigital.tech/" target="_blank"><img src="img/mboa.webp" alt="Mboa Digital"></a>
                                     </div>
@@ -316,7 +316,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="line"></div> -->
+                                <div class="line"></div>
                                 <div class="experience-cards-container-card-img">
                                     <a href="https://market.lamater.net/" target="_blank"><img src="img/lamater.webp" alt="LaMater"></a>
                                 </div>
@@ -590,6 +590,7 @@
                                 </div>
                                 <div class="card-body__footer">
                                     <button>React JS</button>
+                                    <button>Design</button>
                                 </div>
                             </div>
                         </div>
