--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                             <img src="img/arrow-down.svg" alt="arrow-down">
                         </div>
                         <div class="answer">
-                            <!-- <div class="experience-cards-container-card">
+                            <div class="experience-cards-container-card">
                                 <div class="experience-cards-container-card-img">
                                     <a href="https://mboadigital.tech/" target="_blank"><img src="img/mboa.webp" alt="Mboa Digital"></a>
                                 </div>
@@ -317,7 +317,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="line"></div> -->
+                            <div class="line"></div>
                             <div class="experience-cards-container-card">
                                 <div class="experience-cards-container-card-img">
                                     <a href="https://market.lamater.net/" target="_blank"><img src="img/lamater.webp" alt="LaMater"></a>
@@ -593,6 +593,7 @@
                                 </div>
                                 <div class="card-body__footer">
                                     <button>React JS</button>
+                                    <button>Design</button>
                                 </div>
                             </div>
                         </div>
