--- a/index.en.html
+++ b/index.en.html
@@ -333,9 +333,13 @@
                                         The main goal was the implementation of templates for <b><a href="https://genuka.com/" target="_blank">Genuka</a></b> stores through their API, I was also to form a team of two people for the accomplishment of this
                                         said task.
                                     </h4>
-                                    <div><button>SVELTE JS</button> <button>SCSS</button>
-                                        <button>API</button>
-                                        <button>TEAM WORK</button> <button>git</button> <button>github</button>
+                                    <div>
+                                        <button>REACT JS</button> 
+                                        <button>FRAMER MOTION</button>
+                                        <button>MATERIAL UI</button>
+                                        <button>GIT</button>
+                                        <button>AGILE</button>
+                                        <button>TEAM WORK</button>
                                     </div>
                                 </div>
                             </div>
