--- a/index.html
+++ b/index.html
@@ -304,16 +304,18 @@
                                     <p class="experience-cards-container-card-container-description">
                                         <b>Juin 2022 • Aout 2022</b>
                                         <p>Mboa Digital • Yaounde</p>
-
                                     </p>
                                 </div>
                                 <div class="experience-cards-container-card-description">
                                     <h4>
                                     </h4>
-                                    <div><button>REACT JS</button> <button>MOTION</button>
+                                    <div>
+                                        <button>REACT JS</button> 
+                                        <button>FRAMER MOTION</button>
+                                        <button>MATERIAL UI</button>
+                                        <button>GIT</button>
                                         <button>AGILE</button>
-                                        <button>TRVAIL EN
-                                        EQUIPE</button> <button>git</button>
+                                        <button>TRVAIL EN EQUIPE</button>
                                     </div>
                                 </div>
                             </div>
