--- a/index.en.html
+++ b/index.en.html
@@ -317,6 +317,7 @@
                                     </div>
                                 </div>
                                 <div class="line"></div>
+                            <div class="experience-cards-container-card">
                                 <div class="experience-cards-container-card-img">
                                     <a href="https://market.lamater.net/" target="_blank"><img src="img/lamater.webp" alt="LaMater"></a>
                                 </div>
